fixed fotter on safari

--- a/styles.css
+++ b/styles.css
@@ -225,6 +225,7 @@ nav ul li a
 {
     margin: auto;
     width: 400px;
+    height:80px;
     max-width: 90%;
     text-align: left;
     margin:20px auto;
